fix text wrap

--- a/app/global.css
+++ b/app/global.css
@@ -109,10 +109,6 @@ li {
   margin: 0.5rem 0;
 }
 
-p {
-  text-wrap: balance;
-}
-
 .links a {
   color: var(--text-color);
 }
